--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,4 @@ jobs:
             - ./node_modules
       - run: # run tests
           name: Run Test and Coverage
-          command: |
-            ./cc-test-reporter before-build
-            npm test -- --coverage
-            ./cc-test-reporter after-build --exit-code $?
+          command: npm test
