--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,4 +21,7 @@ jobs:
             - ./node_modules
       - run: # run tests
           name: Run Test and Coverage
-          command: npm test
+          command: |
+            ./cc-test-reporter before-build
+            npm test -- --coverage
+            ./cc-test-reporter after-build --exit-code $?
