--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,9 @@ jobs:
   build:
     docker:
       - image: circleci/node:8
+    branches:
+        only:
+            - master
     steps:
       - checkout
       - restore_cache: # special step to restore the dependency cache
@@ -21,7 +24,4 @@ jobs:
             - ./node_modules
       - run: # run tests
           name: Run Test and Coverage
-          command: |
-            ./cc-test-reporter before-build
-            npm test -- --coverage
-            ./cc-test-reporter after-build --exit-code $?
+          command: npm test
